Fixed screen shift

--- a/html/static/login.css
+++ b/html/static/login.css
@@ -92,6 +92,7 @@ button {
     .login {
         width: 90vw;
         min-width: 300px;
+        position: fixed;
     }
 
     .login-divider {
@@ -142,7 +143,6 @@ button {
 }
 
 .login-button__image {
-    padding: 0 0 0 10px; 
     margin-right: 200px;
     height: 20px;
     padding: 5px;
